<resources>
    <string name="app_name" translatable="false">Module 201 - Project 5</string>
    <string name="back">Back</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register">Register</string>
    <string name="coffee_first_coding_nlater">Coffee first.Coding \nlater</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="it_s_coffee_time">It’s coffee time!</string>
    <string name="username">Username</string>
    <string name="already_a_member">Already a member?</string>
</resources>