<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="24dp"
    android:gravity="start"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageViewBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/outline_arrow_back_ios_24"
        android:contentDescription="@string/back"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp" />

    <LinearLayout
        android:id="@+id/containerContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="64dp">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/it_s_coffee_time"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/dark_brown"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/light_brown"
            android:layout_gravity="center"
            android:layout_marginTop="32dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_a_member"
                android:textColor="@color/medium_gray" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/light_brown"
                android:textStyle="bold"
                android:layout_marginTop="4dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>